# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.cache/v/cache/: lastfailed
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: _home_apietila__cache_pypoetry_virtualenvs_maksukortti-i5hVPfdP-py3_6_lib_python3_6_site-packages__pytest___init___py.html  _home_apietila__cache_pypoetry_virtualenvs_maksukortti-i5hVPfdP-py3_6_lib_python3_6_site-packages__pytest__argcomplete_py.html  _home_apietila__cache_pypoetry_virtualenvs_maksukortti-i5hVPfdP-py3_6_lib_python3_6_site-packages__pytest__code___init___py.html  _home_apietila__cache_pypoetry_virtualenvs_maksukortti-i5hVPfdP-py3_6_lib_python3_6_site-packages__pytest__code_code_py.html  _home_apietila__cache_pypoetry_virtualenvs_maksukortti-i5hVPfdP-py3_6_lib_python3_6_site-packages__pytest__code_source_py.html  _home_apietila__cache_pypoetry_virtualenvs_maksukortti-i5hVPfdP-py3_6_lib_python3_6_site-packages__pytest__io___init___py.html  (+98 more)
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  status.json  (+2 more)
src/: bone.py  bonecatalogue.py  gui.py  plotter.py  reader.py  textinterface.py
src/services/: barts2.csv  bartsbones.csv  bonecatalogue.py  testaus.csv
src/tests/: barts2.csv  bonecatalogue_test.py  text_interface.test.py
src/tools/: plotter.py  reader.py
(+4 files in other folders)
