[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Anna Kangasmaa <anna.kangasmaa@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.7.0"
matplotlib = "^3.4.1"
sqlite3-api = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
