[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Anna Kangasmaa <anna.kangasmaa@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlite3-api = "^2.0.1"
invoke = "^1.5.0"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pylint = "^2.7.4"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
